[gd_scene load_steps=5 format=3 uid="uid://c0d6eii46lilc"]

[ext_resource type="Script" uid="uid://bxjuynu3s5b2" path="res://bar.gd" id="1_sbg6f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nj6yy"]
size = Vector2(1000, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qm5k1"]
size = Vector2(400, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xtgmr"]
size = Vector2(20, 633)

[node name="Bar" type="Node2D"]
script = ExtResource("1_sbg6f")

[node name="Background" type="ColorRect" parent="."]
z_index = -1
offset_right = 1000.0
offset_bottom = 600.0
color = Color(0.12549, 0.12549, 0.12549, 1)

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(500, 550)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource("RectangleShape2D_nj6yy")

[node name="ColorRect" type="ColorRect" parent="Floor"]
offset_left = -500.0
offset_top = -10.0
offset_right = 500.0
offset_bottom = 10.0
color = Color(0.541176, 0.270588, 0.0784314, 1)

[node name="BarCounter" type="StaticBody2D" parent="."]
position = Vector2(500, 400)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BarCounter"]
position = Vector2(0, -25)
shape = SubResource("RectangleShape2D_qm5k1")
disabled = true

[node name="ColorRect" type="ColorRect" parent="BarCounter"]
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
color = Color(0.686275, 0.388235, 0.129412, 1)

[node name="PlayerPositions" type="Node2D" parent="."]

[node name="Player1Position" type="Marker2D" parent="PlayerPositions"]
position = Vector2(300, 450)

[node name="Player2Position" type="Marker2D" parent="PlayerPositions"]
position = Vector2(700, 450)

[node name="walls" type="StaticBody2D" parent="."]

[node name="left_wall" type="CollisionShape2D" parent="walls"]
position = Vector2(-1, 305)
shape = SubResource("RectangleShape2D_xtgmr")

[node name="right_wall" type="CollisionShape2D" parent="walls"]
position = Vector2(1003, 293)
shape = SubResource("RectangleShape2D_xtgmr")
